Bug 159730 - RTF table split document layout
Summary: RTF table split document layout
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.2 target:7....
Keywords: bibisectRequest, filter:rtf, regression
Depends on:
Blocks: RTF-Tables
  Show dependency treegraph
 
Reported: 2024-02-15 09:08 UTC by Oliver Specht (CIB)
Modified: 2024-08-16 09:31 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example (75.41 KB, application/msword)
2024-02-15 09:08 UTC, Oliver Specht (CIB)
Details
Screenshot (177.06 KB, image/jpeg)
2024-02-15 09:11 UTC, Oliver Specht (CIB)
Details
The second example file in Word 2016 and Writer master (75.36 KB, image/png)
2024-03-19 12:12 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2024-02-15 09:08:54 UTC
Created attachment 192576 [details]
Example

The table requires more space in LO than in Word.
Comment 1 Oliver Specht (CIB) 2024-02-15 09:11:50 UTC
Created attachment 192577 [details]
Screenshot

Screenshot showing the difference if hidden characters are visible.
Comment 2 Commit Notification 2024-02-16 13:22:56 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3b04e74503ec6d07dc4befdb756e6abdc3de4e58

tdf#159730 add compatibility option in RTF import

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-02-20 13:30:57 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/02ecd57a8364b4ca049c59a978c3b16c0389a6cd

tdf#159730 add compatibility option in RTF import

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-02-20 17:43:28 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/6dbe242fd16aada3e1f507e35334c6d416e00994

tdf#159730 add compatibility option in RTF import

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 stragu 2024-03-18 13:25:56 UTC
Reproduced the wider cells in:

Version: 24.2.1.2 (X86_64) / LibreOffice Community
Build ID: db4def46b0453cc22e2d0305797cf981b68ef5ac
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 39663a323c3330c18b610fcdc9e9c75ddac770f1
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

And in 5.3.0.3, but not in 5.2.0.4.
Comment 6 Gabor Kelemen (Collabora) 2024-03-19 12:12:04 UTC
Created attachment 193193 [details]
The second example file in Word 2016 and Writer master

Something looks strange here: the fields in the bottom rows of the table are shifted up a bit and hang out at the top of their cell, instead of being vertically centered.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a2265e8faa099d9652efd12392c2877c2df1d1eb
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: de-DE
Calc: default

bibisect shows it started with these commits. 
Docx or doc version saved from Word looks good.
Comment 7 Gabor Kelemen (Collabora) 2024-03-19 12:25:19 UTC
(In reply to Stéphane Guillou (stragu) from comment #5)
> Reproduced the wider cells in:
> 
> And in 5.3.0.3, but not in 5.2.0.4.

This is probably bug 148554 - but here the issue was different.
Comment 8 Commit Notification 2024-03-21 14:41:46 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/44e4ada23dfc8655ec7ddccfd027f02d22684d60

Revert "tdf#159730 add compatibility option in RTF import"

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-03-21 17:14:09 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-7-6-6":

https://git.libreoffice.org/core/commit/b4c354aa8ba941071ef5fe848eb8eb7ccacd8380

Revert "tdf#159730 add compatibility option in RTF import"

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-03-21 20:21:41 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/fad1f551ebc2db9c13e2f1f8f6c748b1ac45793b

Revert "tdf#159730 add compatibility option in RTF import"

It will be available in 7.6.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-03-22 09:06:21 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/9b8f6f881185831ec77f1c692c8726fd1459a746

Revert "tdf#159730 add compatibility option in RTF import"

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2024-03-22 18:43:00 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-2":

https://git.libreoffice.org/core/commit/67e35d0159d30829c7672f3d4d33de2e85cd6626

Revert "tdf#159730 add compatibility option in RTF import"

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Buovjaga 2024-08-05 10:36:29 UTC
Oliver: it seems to me you fixed this with 13cd36248069d32688cfb8adfe0955ca5229e075, right?

tdf#148554 RTF import - reset borders on fill cells
Comment 14 Oliver Specht (CIB) 2024-08-12 14:08:54 UTC
(In reply to Buovjaga from comment #13)
> Oliver: it seems to me you fixed this with
> 13cd36248069d32688cfb8adfe0955ca5229e075, right?
> 
> tdf#148554 RTF import - reset borders on fill cells

At least I hope so