tdf#159730 add compatibility option in RTF import

Set IgnoreTabsAndBlanksForLineCalculation in RTF import to improve formatting.

Change-Id: If0129f748c48400f1dd882672b5779f62e685ecd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163429
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit 3b04e74503ec6d07dc4befdb756e6abdc3de4e58)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163655